# graph-sindy-geo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/pyg_sindy_demo/: __init__.py  demo.py
tests/: test_graph_and_sim.py  test_sindy_recovery.py
