[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pyg-sindy-graph-demo"
version = "0.1.0"
description = "Minimal PyTorch Geometric + PySINDy demo on irregular graphs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pysindy>=1.7.5",
    "torch>=2.2,<2.3",
    "torch-geometric>=2.5.0",
    # The following are PyG deps; wheels are resolved via requirements.txt extra index
    "torch-scatter>=2.1.0",
    "torch-sparse>=0.6.18",
    "torch-cluster>=1.6.3",
    "pytest>=7.4",
]
